; ModuleID = '/home/carl/AnghaBench/memcached/extr_restart.c_restart_mmap_open.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_restart.c_restart_mmap_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@memory_file = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@S_IRWXU = common dso_local global i32 0, align 4
@mmap_fd = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"ftruncate failed\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [77 x i8] c"[restart] memory limit not divisible evenly by pagesize (please report bug)\0A\00", align 1
@PROT_READ = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@MAP_SHARED = common dso_local global i32 0, align 4
@mmap_base = common dso_local global i8* null, align 8
@MAP_FAILED = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [25 x i8] c"failed to mmap, aborting\00", align 1
@slabmem_limit = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @restart_mmap_open(i64 %0, i8* %1, i8** %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i8* %1, i8** %5, align 8
  store i8** %2, i8*** %6, align 8
  store i32 1, i32* %7, align 4
  %9 = call i64 (...) @_find_pagesize()
  store i64 %9, i64* %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @strdup(i8* %10)
  store i32 %11, i32* @memory_file, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = load i32, i32* @O_RDWR, align 4
  %14 = load i32, i32* @O_CREAT, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @S_IRWXU, align 4
  %17 = call i32 @open(i8* %12, i32 %15, i32 %16)
  store i32 %17, i32* @mmap_fd, align 4
  %18 = load i32, i32* @mmap_fd, align 4
  %19 = load i64, i64* %4, align 8
  %20 = call i64 @ftruncate(i32 %18, i64 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %3
  %23 = call i32 @perror(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %24 = call i32 (...) @abort() #3
  unreachable

25:                                               ; preds = %3
  %26 = load i64, i64* %4, align 8
  %27 = load i64, i64* %8, align 8
  %28 = urem i64 %26, %27
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %25
  %31 = load i32, i32* @stderr, align 4
  %32 = call i32 @fprintf(i32 %31, i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str.1, i64 0, i64 0))
  %33 = call i32 (...) @abort() #3
  unreachable

34:                                               ; preds = %25
  %35 = load i64, i64* %4, align 8
  %36 = load i32, i32* @PROT_READ, align 4
  %37 = load i32, i32* @PROT_WRITE, align 4
  %38 = or i32 %36, %37
  %39 = load i32, i32* @MAP_SHARED, align 4
  %40 = load i32, i32* @mmap_fd, align 4
  %41 = call i8* @mmap(i32* null, i64 %35, i32 %38, i32 %39, i32 %40, i32 0)
  store i8* %41, i8** @mmap_base, align 8
  %42 = load i8*, i8** @mmap_base, align 8
  %43 = load i8*, i8** @MAP_FAILED, align 8
  %44 = icmp eq i8* %42, %43
  br i1 %44, label %45, label %48

45:                                               ; preds = %34
  %46 = call i32 @perror(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  %47 = call i32 (...) @abort() #3
  unreachable

48:                                               ; preds = %34
  %49 = load i64, i64* %4, align 8
  store i64 %49, i64* @slabmem_limit, align 8
  %50 = load i8*, i8** %5, align 8
  %51 = call i64 @restart_check(i8* %50)
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %54

53:                                               ; preds = %48
  store i32 0, i32* %7, align 4
  br label %54

54:                                               ; preds = %53, %48
  %55 = load i8*, i8** @mmap_base, align 8
  %56 = load i8**, i8*** %6, align 8
  store i8* %55, i8** %56, align 8
  %57 = load i32, i32* %7, align 4
  ret i32 %57
}

declare dso_local i64 @_find_pagesize(...) #1

declare dso_local i32 @strdup(i8*) #1

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i64 @ftruncate(i32, i64) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i8* @mmap(i32*, i64, i32, i32, i32, i32) #1

declare dso_local i64 @restart_check(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
